{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 18,
  "lineage": "c040893f-0e18-4091-8e73-050b91e00544",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c3e8df62015275ea",
            "arn": "arn:aws:ec2:us-east-1:230446364776:instance/i-0cea65ac652556767",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": true,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cea65ac652556767",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02caf404f294f5b36",
            "private_dns": "ip-10-0-1-123.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.123",
            "public_dns": "ec2-54-167-36-172.compute-1.amazonaws.com",
            "public_ip": "54.167.36.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:230446364776:key/dbbcd41d-3556-4fce-bedd-9334636f2cae",
                "tags_all": {
                  "Environment": "test",
                  "ManagedBy": "Terraform",
                  "Project": "TFDrift-Falco"
                },
                "throughput": 125,
                "volume_id": "vol-0421d4246dcfc2621",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fa895b0ccbc1ab1f",
            "tags": {
              "Name": "tfdrift-test-webserver"
            },
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "Terraform",
              "Name": "tfdrift-test-webserver",
              "Project": "TFDrift-Falco"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00b0bd48f1f5bca5b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.webserver",
            "aws_subnet.public",
            "aws_vpc.test",
            "data.aws_ami.amazon_linux_2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:230446364776:internet-gateway/igw-0ed113c520bf0b7d9",
            "id": "igw-0ed113c520bf0b7d9",
            "owner_id": "230446364776",
            "tags": {
              "Name": "tfdrift-test-igw"
            },
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "Terraform",
              "Name": "tfdrift-test-igw",
              "Project": "TFDrift-Falco"
            },
            "vpc_id": "vpc-0a2d20c13642e37cc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:230446364776:route-table/rtb-08b80bf203a61c33e",
            "id": "rtb-08b80bf203a61c33e",
            "owner_id": "230446364776",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ed113c520bf0b7d9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tfdrift-test-public-rt"
            },
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "Terraform",
              "Name": "tfdrift-test-public-rt",
              "Project": "TFDrift-Falco"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2d20c13642e37cc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.test",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016a4a244261c4c8d",
            "route_table_id": "rtb-08b80bf203a61c33e",
            "subnet_id": "subnet-0fa895b0ccbc1ab1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.test",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:230446364776:security-group/sg-00b0bd48f1f5bca5b",
            "description": "Security group for test webserver",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00b0bd48f1f5bca5b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tfdrift-test-webserver-sg",
            "name_prefix": "",
            "owner_id": "230446364776",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tfdrift-test-webserver-sg"
            },
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "Terraform",
              "Name": "tfdrift-test-webserver-sg",
              "Project": "TFDrift-Falco"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2d20c13642e37cc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:230446364776:subnet/subnet-0fa895b0ccbc1ab1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa895b0ccbc1ab1f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "230446364776",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tfdrift-test-public-subnet"
            },
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "Terraform",
              "Name": "tfdrift-test-public-subnet",
              "Project": "TFDrift-Falco"
            },
            "vpc_id": "vpc-0a2d20c13642e37cc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:230446364776:vpc/vpc-0a2d20c13642e37cc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01d88356765d99440",
            "default_route_table_id": "rtb-0b0e8c3dc48b6b7cd",
            "default_security_group_id": "sg-0c887cab8ea75c2b7",
            "dhcp_options_id": "dopt-de4606a4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a2d20c13642e37cc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b0e8c3dc48b6b7cd",
            "owner_id": "230446364776",
            "tags": {
              "Name": "tfdrift-test-vpc"
            },
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "Terraform",
              "Name": "tfdrift-test-vpc",
              "Project": "TFDrift-Falco"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}